Debugging Layer, Clocks also added

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,19 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-Pos=1405,116
-Size=427,121
+Pos=759,35
+Size=488,644
 Collapsed=0
+DockId=0x00000004,0
+
+[Window][Dear ImGui Demo]
+Pos=276,35
+Size=481,644
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=317,105 Size=971,644 Split=X Selected=0x2E0CEF3B
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=272,644 Selected=0xE927CF2F
+  DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=276,644 Selected=0x2E0CEF3B
 
