--- a/imgui.ini
+++ b/imgui.ini
@@ -9,19 +9,55 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-Pos=759,35
-Size=488,644
+ViewportPos=1417,388
+ViewportId=0x2E0CEF3B
+Size=514,331
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1380,0
+Size=540,991
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Editor]
+Pos=0,0
+Size=1378,991
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Dear ImGui Demo]
-Pos=276,35
-Size=481,644
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1920,991
 Collapsed=0
-DockId=0x00000003,0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=0,825
+Size=1920,166
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Example: Simple layout]
+ViewportPos=182,244
+ViewportId=0x3DD03744
+Size=606,701
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=317,105 Size=971,644 Split=X Selected=0x2E0CEF3B
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=272,644 Selected=0xE927CF2F
-  DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=276,644 Selected=0x2E0CEF3B
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=X Selected=0xCB5DF48C
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=1378,900 Split=Y
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,166 Selected=0xBF126D42
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=540,900 Selected=0xE927CF2F
 
