--- a/imgui.ini
+++ b/imgui.ini
@@ -9,26 +9,26 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-ViewportPos=1417,388
+ViewportPos=1561,385
 ViewportId=0x2E0CEF3B
-Size=514,331
+Size=514,471
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1380,0
-Size=540,991
+Pos=101,0
+Size=223,900
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Editor]
-Pos=0,0
-Size=1378,991
+Pos=326,0
+Size=1274,900
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Example: Console]
@@ -55,9 +55,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=X Selected=0xCB5DF48C
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=1378,900 Split=Y
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,166 Selected=0xBF126D42
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=540,900 Selected=0xE927CF2F
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=1600,900 Split=X Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=389,900 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=119,900 Split=Y
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,166 Selected=0xBF126D42
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=268,900 Selected=0xE927CF2F
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1529,900 Selected=0xCB5DF48C
 
