Circles implemented, Rendering coordinates changed

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,20 +9,20 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-ViewportPos=1561,385
+ViewportPos=1475,556
 ViewportId=0x2E0CEF3B
-Size=514,471
+Size=514,644
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=101,0
-Size=223,900
+Pos=0,0
+Size=532,900
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Editor]
-Pos=326,0
-Size=1274,900
+Pos=568,0
+Size=1032,900
 Collapsed=0
 DockId=0x00000007,0
 
@@ -47,7 +47,7 @@ ViewportPos=182,244
 ViewportId=0x3DD03744
 Size=606,701
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000001,1
 
 [Window][Example: Property editor]
 Pos=60,60
@@ -55,11 +55,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=1600,900 Split=X Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=389,900 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=119,900 Split=Y
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,166 Selected=0xBF126D42
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=268,900 Selected=0xE927CF2F
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1529,900 Selected=0xCB5DF48C
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-186,114 Size=1600,900 Split=X Selected=0xCB5DF48C
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=639,991 Selected=0xE927CF2F
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1279,991 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=32,900 Split=Y
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1920,166 Selected=0xBF126D42
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=1245,900 Selected=0xCB5DF48C
 
