Raytracing for circle started

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,7 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-ViewportPos=1475,556
-ViewportId=0x2E0CEF3B
+Pos=207,64
 Size=514,644
 Collapsed=0
 
@@ -21,10 +20,10 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=568,0
-Size=1032,900
+Pos=534,0
+Size=1066,900
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000004,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -32,9 +31,10 @@ Size=1600,900
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+Pos=0,615
+Size=1600,285
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Example: Log]
 Pos=0,825
@@ -55,11 +55,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-186,114 Size=1600,900 Split=X Selected=0xCB5DF48C
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=639,991 Selected=0xE927CF2F
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1279,991 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=32,900 Split=Y
-      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1920,166 Selected=0xBF126D42
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=1245,900 Selected=0xCB5DF48C
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,179 Size=1600,900 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1920,675 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=639,991 Selected=0xE927CF2F
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=1279,991 Split=Y
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=1920,166 Selected=0xBF126D42
+  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=1920,314 Selected=0x46B5E99C
 
