--- a/imgui.ini
+++ b/imgui.ini
@@ -9,21 +9,21 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-Pos=207,64
+Pos=294,98
 Size=514,644
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=532,900
+Size=639,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=534,0
-Size=1066,900
+Pos=641,0
+Size=959,900
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -31,8 +31,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][Example: Console]
-Pos=0,615
-Size=1600,285
+Pos=0,726
+Size=1920,97
 Collapsed=0
 DockId=0x00000008,0
 
@@ -40,7 +40,7 @@ DockId=0x00000008,0
 Pos=0,825
 Size=1920,166
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][Example: Simple layout]
 ViewportPos=182,244
@@ -55,11 +55,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,179 Size=1600,900 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1920,675 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=639,991 Selected=0xE927CF2F
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=1279,991 Split=Y
-      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1920,804 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=1920,166 Selected=0xBF126D42
-  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=1920,314 Selected=0x46B5E99C
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,179 Size=1600,900 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,823 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,724 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=639,991 Selected=0xE927CF2F
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1279,991 CentralNode=1 Selected=0xCB5DF48C
+    DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=1920,97 Selected=0x46B5E99C
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1920,166 Selected=0xBF126D42
 
