--- a/imgui.ini
+++ b/imgui.ini
@@ -9,25 +9,26 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-Pos=3,75
-Size=514,663
+ViewportPos=1182,1001
+ViewportId=0x2E0CEF3B
+Size=514,1051
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=639,991
+Size=32,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=641,0
-Size=1279,991
+Pos=34,0
+Size=1566,900
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Example: Console]
@@ -55,11 +56,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=Y Selected=0xCB5DF48C
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,134 Size=1600,900 Split=Y Selected=0xCB5DF48C
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,823 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,724 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=639,991 Selected=0xE927CF2F
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=32,991 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=32,991 Selected=0xE927CF2F
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1886,991 CentralNode=1 Selected=0xCB5DF48C
     DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=1920,97 Selected=0x46B5E99C
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1920,166 Selected=0xBF126D42
 
