--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,8 @@ Size=177,82
 Collapsed=0
 
 [Window][Debug Window]
-ViewportPos=1182,1001
-ViewportId=0x2E0CEF3B
-Size=514,1051
+Pos=270,182
+Size=383,618
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -60,7 +59,7 @@ DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,134 Size=1600,900 Split=
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,823 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,724 Split=X
       DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=32,991 Selected=0xE927CF2F
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1886,991 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1566,991 CentralNode=1 Selected=0xCB5DF48C
     DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=1920,97 Selected=0x46B5E99C
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1920,166 Selected=0xBF126D42
 
