--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,24 +9,25 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=117,242
-Size=421,299
+ViewportPos=1350,792
+ViewportId=0x2E0CEF3B
+Size=421,340
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=130,991
+Size=130,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
 Pos=132,0
-Size=1788,991
+Size=1468,900
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=X Selected=0xCB5DF48C
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,179 Size=1600,900 Split=X Selected=0xCB5DF48C
   DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=130,900 Selected=0xE927CF2F
   DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1468,900 CentralNode=1 Selected=0xCB5DF48C
 
