--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,12 @@
 [submodule "Libs/freetype"]
     path = Libs/freetype
     url = https://github.com/DevAlgos/freetype.git
+
+[submodule "Libs/openal-soft"]
+    path = Libs/openal-soft
+    url = https://github.com/kcat/openal-soft.git
+
+[submodule "Libs/libsndfile"]
+    path = Libs/libsndfile
+    url = https://github.com/libsndfile/libsndfile.git
+
