--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -9,24 +9,29 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=985,58
-Size=421,333
+Pos=918,109
+Size=176,123
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=304,900
+Size=234,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=306,0
-Size=1294,900
+Pos=236,0
+Size=1364,900
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][TooGood]
+Pos=1229,150
+Size=287,100
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,134 Size=1600,900 Split=X Selected=0xCB5DF48C
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=304,900 Selected=0xE927CF2F
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1614,900 CentralNode=1 Selected=0xCB5DF48C
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,179 Size=1600,900 Split=X Selected=0xCB5DF48C
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=234,900 HiddenTabBar=1 Selected=0xE927CF2F
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1364,900 CentralNode=1 HiddenTabBar=1 Selected=0xCB5DF48C
 
