--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -9,29 +9,72 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=918,109
-Size=176,123
+Pos=0,0
+Size=240,622
 Collapsed=0
+DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=234,900
+Size=240,622
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=236,0
-Size=1364,900
+Pos=242,0
+Size=938,622
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][TooGood]
-Pos=1229,150
-Size=287,100
+Pos=416,177
+Size=287,101
+Collapsed=0
+
+[Window][Audio]
+Pos=0,624
+Size=1600,276
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Sources]
+Pos=0,624
+Size=1600,276
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Example: Console]
+Pos=255,164
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Log]
+Pos=478,154
+Size=415,275
+Collapsed=0
+
+[Window][Debug Output]
+Pos=1182,0
+Size=418,622
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][User Editing]
+Pos=1157,519
+Size=393,141
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,179 Size=1600,900 Split=X Selected=0xCB5DF48C
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=234,900 HiddenTabBar=1 Selected=0xE927CF2F
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1364,900 CentralNode=1 HiddenTabBar=1 Selected=0xCB5DF48C
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=1600,900 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,622 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=240,900 Selected=0x2E0CEF3B
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1358,900 Split=X Selected=0xCB5DF48C
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=938,622 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=418,622 Selected=0x69360278
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,276 Selected=0x1DE05C6E
 
