--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1920,991
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Debug Window]
 Pos=0,0
-Size=240,622
+Size=32,872
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=240,622
+Size=32,872
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Editor]
-Pos=242,0
-Size=1060,622
+Pos=34,0
+Size=1458,872
 Collapsed=0
 DockId=0x00000004,0
 
@@ -32,14 +32,14 @@ Size=287,101
 Collapsed=0
 
 [Window][Audio]
-Pos=0,624
-Size=1600,276
+Pos=0,874
+Size=1920,117
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sources]
-Pos=0,624
-Size=1600,276
+Pos=0,874
+Size=1920,117
 Collapsed=0
 DockId=0x00000007,1
 
@@ -59,22 +59,23 @@ Size=415,275
 Collapsed=0
 
 [Window][Debug Output]
-Pos=1304,0
-Size=296,622
+Pos=1494,0
+Size=426,872
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][User Editing]
-Pos=1157,519
-Size=393,141
+Pos=1494,0
+Size=426,872
 Collapsed=0
+DockId=0x00000005,1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=261,115 Size=1600,900 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,622 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=240,900 Selected=0x2E0CEF3B
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1358,900 Split=X Selected=0xCB5DF48C
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1332,622 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=296,622 Selected=0x69360278
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,276 Selected=0x1DE05C6E
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,872 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=32,900 Selected=0x2E0CEF3B
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1886,900 Split=X Selected=0xCB5DF48C
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1458,622 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=426,622 Selected=0x32A7EEA8
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,117 Selected=0x1DE05C6E
 
