started entity node tree gui

--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1920,991
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,22 +9,21 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=0,0
-Size=167,688
+Pos=1078,121
+Size=390,236
 Collapsed=0
-DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
-Pos=0,0
+ViewportPos=1130,261
+ViewportId=0xE927CF2F
 Size=167,688
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Editor]
-Pos=169,0
-Size=1009,688
+Pos=486,0
+Size=1174,833
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][TooGood]
 Pos=416,177
@@ -32,14 +31,14 @@ Size=287,101
 Collapsed=0
 
 [Window][Audio]
-Pos=0,690
-Size=1600,210
+Pos=0,835
+Size=1920,156
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sources]
-Pos=0,690
-Size=1600,210
+Pos=0,835
+Size=1920,156
 Collapsed=0
 DockId=0x00000007,1
 
@@ -59,23 +58,34 @@ Size=415,275
 Collapsed=0
 
 [Window][Debug Output]
-Pos=1180,0
-Size=420,688
+Pos=1662,0
+Size=258,833
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][User Editing]
-Pos=1180,0
-Size=420,688
+Pos=1761,0
+Size=159,942
 Collapsed=0
 DockId=0x00000005,1
 
+[Window][Entities]
+Pos=0,0
+Size=484,833
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,134 Size=1600,900 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,688 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=167,900 Selected=0x2E0CEF3B
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1431,900 Split=X Selected=0xCB5DF48C
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1009,622 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=420,622 Selected=0x32A7EEA8
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,210 Selected=0x1DE05C6E
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,833 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1660,622 Split=X Selected=0xCB5DF48C
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=484,688 Selected=0xA99A06B3
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=1174,688 CentralNode=1 Selected=0xCB5DF48C
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=258,622 Selected=0x69360278
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,156 Selected=0x1DE05C6E
 
