--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=1078,121
-Size=390,236
+Pos=1189,113
+Size=246,188
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -20,8 +20,8 @@ Size=167,688
 Collapsed=0
 
 [Window][Editor]
-Pos=486,0
-Size=1174,833
+Pos=339,0
+Size=913,734
 Collapsed=0
 DockId=0x00000006,0
 
@@ -31,14 +31,14 @@ Size=287,101
 Collapsed=0
 
 [Window][Audio]
-Pos=0,835
-Size=1920,156
+Pos=0,736
+Size=1600,164
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sources]
-Pos=0,835
-Size=1920,156
+Pos=0,736
+Size=1600,164
 Collapsed=0
 DockId=0x00000007,1
 
@@ -58,20 +58,20 @@ Size=415,275
 Collapsed=0
 
 [Window][Debug Output]
-Pos=1662,0
-Size=258,833
+Pos=1254,0
+Size=346,734
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][User Editing]
-Pos=1761,0
-Size=159,942
+Pos=1254,0
+Size=346,734
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Entities]
 Pos=0,0
-Size=484,833
+Size=337,734
 Collapsed=0
 DockId=0x00000002,0
 
@@ -81,11 +81,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,29 Size=1920,991 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,833 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1660,622 Split=X Selected=0xCB5DF48C
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=484,688 Selected=0xA99A06B3
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=1174,688 CentralNode=1 Selected=0xCB5DF48C
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=258,622 Selected=0x69360278
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,156 Selected=0x1DE05C6E
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=149,91 Size=1600,900 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,734 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1252,622 Split=X Selected=0xCB5DF48C
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=337,688 Selected=0xA99A06B3
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=913,688 CentralNode=1 Selected=0xCB5DF48C
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=346,622 Selected=0x32A7EEA8
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,164 Selected=0xD9BC1991
 
