--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -9,9 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug Window]
-Pos=1189,113
-Size=246,188
+Pos=302,0
+Size=902,667
 Collapsed=0
+DockId=0x00000006,1
 
 [Window][Dear ImGui Demo]
 ViewportPos=1130,261
@@ -20,8 +21,8 @@ Size=167,688
 Collapsed=0
 
 [Window][Editor]
-Pos=339,0
-Size=913,734
+Pos=302,0
+Size=902,667
 Collapsed=0
 DockId=0x00000006,0
 
@@ -31,14 +32,14 @@ Size=287,101
 Collapsed=0
 
 [Window][Audio]
-Pos=0,736
-Size=1600,164
+Pos=0,669
+Size=1600,231
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Sources]
-Pos=0,736
-Size=1600,164
+Pos=0,669
+Size=1600,231
 Collapsed=0
 DockId=0x00000007,1
 
@@ -58,20 +59,20 @@ Size=415,275
 Collapsed=0
 
 [Window][Debug Output]
-Pos=1254,0
-Size=346,734
+Pos=1206,0
+Size=394,667
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][User Editing]
-Pos=1254,0
-Size=346,734
+Pos=1543,0
+Size=377,735
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Entities]
 Pos=0,0
-Size=337,734
+Size=300,667
 Collapsed=0
 DockId=0x00000002,0
 
@@ -81,11 +82,11 @@ Size=430,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=149,91 Size=1600,900 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,734 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1252,622 Split=X Selected=0xCB5DF48C
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=337,688 Selected=0xA99A06B3
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=913,688 CentralNode=1 Selected=0xCB5DF48C
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=346,622 Selected=0x32A7EEA8
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,164 Selected=0xD9BC1991
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,179 Size=1600,900 Split=Y Selected=0xCB5DF48C
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,735 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1204,622 Split=X Selected=0xCB5DF48C
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=300,688 Selected=0xA99A06B3
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=902,688 CentralNode=1 Selected=0xCB5DF48C
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=394,622 Selected=0x69360278
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,254 Selected=0x1DE05C6E
 
