--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1600,800
 Collapsed=0
 
 [Window][Debug##Default]
@@ -8,85 +8,48 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Debug Window]
-Pos=302,0
-Size=902,667
-Collapsed=0
-DockId=0x00000006,1
-
-[Window][Dear ImGui Demo]
-ViewportPos=1130,261
-ViewportId=0xE927CF2F
-Size=167,688
-Collapsed=0
-
 [Window][Editor]
-Pos=302,0
-Size=902,667
+Pos=378,0
+Size=995,643
 Collapsed=0
-DockId=0x00000006,0
-
-[Window][TooGood]
-Pos=416,177
-Size=287,101
-Collapsed=0
-
-[Window][Audio]
-Pos=0,669
-Size=1600,231
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Sources]
-Pos=0,669
-Size=1600,231
-Collapsed=0
-DockId=0x00000007,1
-
-[Window][Example: Console]
-Pos=255,164
-Size=520,600
-Collapsed=0
-
-[Window][Example: Log]
-Pos=60,60
-Size=500,400
-Collapsed=0
-
-[Window][Log]
-Pos=478,154
-Size=415,275
-Collapsed=0
-
-[Window][Debug Output]
-Pos=1206,0
-Size=394,667
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][User Editing]
-Pos=1543,0
-Size=377,735
-Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000001,0
 
 [Window][Entities]
 Pos=0,0
-Size=300,667
+Size=376,800
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Audio]
+Pos=0,0
+Size=376,800
+Collapsed=0
+DockId=0x00000005,1
+
+[Window][Sources]
+Pos=0,0
+Size=376,800
+Collapsed=0
+DockId=0x00000005,2
+
+[Window][Debug Output]
+Pos=1375,0
+Size=225,643
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Example: Property editor]
-Pos=60,60
-Size=430,450
+[Window][Debug Window]
+Pos=378,645
+Size=1222,155
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,179 Size=1600,900 Split=Y Selected=0xCB5DF48C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1920,735 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=1204,622 Split=X Selected=0xCB5DF48C
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=300,688 Selected=0xA99A06B3
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=902,688 CentralNode=1 Selected=0xCB5DF48C
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=394,622 Selected=0x69360278
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,254 Selected=0x1DE05C6E
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=1600,800 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=376,991 Selected=0x1DE05C6E
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1222,991 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,797 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=995,991 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=225,991 Selected=0x69360278
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1920,192 Selected=0x2E0CEF3B
 
