more good stuffff

--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -9,26 +9,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Editor]
-Pos=378,0
-Size=995,643
+Pos=463,0
+Size=910,643
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Entities]
 Pos=0,0
-Size=376,800
+Size=461,800
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Audio]
 Pos=0,0
-Size=376,800
+Size=461,800
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Sources]
 Pos=0,0
-Size=376,800
+Size=461,800
 Collapsed=0
 DockId=0x00000005,2
 
@@ -39,17 +39,27 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Debug Window]
-Pos=378,645
-Size=1222,155
+Pos=463,645
+Size=1137,155
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Model source]
+Pos=657,133
+Size=581,212
+Collapsed=0
+
+[Window][Change entity name]
+Pos=491,75
+Size=453,173
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=1600,800 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=376,991 Selected=0x1DE05C6E
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1222,991 Split=Y
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,134 Size=1600,800 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=461,991 Selected=0xA99A06B3
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1137,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,797 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=995,991 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=910,991 CentralNode=1 Selected=0xCB5DF48C
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=225,991 Selected=0x69360278
     DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1920,192 Selected=0x2E0CEF3B
 
