--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Editor]
 Pos=463,0
-Size=910,643
+Size=785,643
 Collapsed=0
 DockId=0x00000001,0
 
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x00000005,2
 
 [Window][Debug Output]
-Pos=1375,0
-Size=225,643
+Pos=1250,0
+Size=350,643
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,8 +45,9 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Model source]
-Pos=631,87
-Size=581,212
+ViewportPos=285,149
+ViewportId=0x7E7C20D6
+Size=578,212
 Collapsed=0
 
 [Window][Change entity name]
@@ -55,11 +56,11 @@ Size=453,173
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,230 Size=1600,800 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=216,239 Size=1600,800 Split=X
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=461,991 Selected=0xA99A06B3
   DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1137,991 Split=Y
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1920,797 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=910,991 CentralNode=1 Selected=0xCB5DF48C
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=225,991 Selected=0x69360278
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=785,991 CentralNode=1 Selected=0xCB5DF48C
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=350,991 Selected=0x69360278
     DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1920,192 Selected=0x2E0CEF3B
 
